--- a/EventSplit/EventSplit/Info.plist
+++ b/EventSplit/EventSplit/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSContactsUsageDescription</key>
+	<string>EventSplit needs access to contacts to help you invite friends</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We need your location to show you nearby events and calculate distances.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
