--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "seed:run": "ts-node -r tsconfig-paths/register src/database/run-seeds.ts"
   },
   "dependencies": {
+    "@google/genai": "^0.10.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
@@ -38,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.2",
+    "openai": "^4.96.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
